Tweaked some of the code and removed some of the comment

--- a/style.css
+++ b/style.css
@@ -151,3 +151,6 @@ img {
   padding: 50px;
   color: #cd5905;
 }
+
+/* I have only commit MAKE SURE TO FINISH
+   AT NUMBER 6 C. TOMORROW FEB 18TH */
