--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   overflow: hidden;
 }
 
+/* a {
+  scroll-behavior: smooth;
+} */
+
 h1,
 h2,
 h3,
@@ -49,6 +53,10 @@ header {
 
 header img {
   width: 115px;
+}
+
+.nav-bar {
+  display: none;
 }
 
 .header-icon {
@@ -564,4 +572,48 @@ footer {
 
 .footer-logo {
   width: 55px;
+}
+
+@media only screen and (min-width: 768px) {
+  header {
+    position: relative;
+  }
+
+  .header-items-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex: 1;
+  }
+
+  .side-bar-icon {
+    display: none;
+    flex: 0;
+  }
+
+  .nav-bar {
+    display: inline;
+    color: black;
+    z-index: 3;
+    margin-left: 30px;
+  }
+
+  .nav-bar a {
+    font-size: 20px;
+    margin: 5px;
+    padding: 5px;
+    font-family: "Calistoga", cursive;
+    text-decoration: none;
+    color: #fff;
+    text-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  }
+
+  .nav-bar a:hover {
+    color: #fa7d24;
+    transition: all 0.4s ease;
+  }
+
+  .slogan {
+    margin: 40px 0;
+  }
 }
