--- a/style.css
+++ b/style.css
@@ -615,5 +615,47 @@ footer {
 
   .slogan {
     margin: 40px 0;
+    font-size: 35px;
   }
+
+  .drinks-container {
+    display: flex;
+    margin-bottom: 40px;
+  }
+
+  .drinks-container li {
+    height: 250px;
+  }
+
+  h3 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  /* .fancy-container {
+    background-image: url("assets/Coffee-images/desktop-background.svg");
+    background-size: cover;
+    background: no-repeat;
+  } */
 }
+
+/* .drinks-container li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #42919c;
+  width: 150px;
+  max-width: 300px;
+  min-width: 150px;
+  height: 185px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  padding-bottom: 15px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px;
+  color: #fff;
+  position: relative;
+} */
