--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ h1 img {
 }
 
 .slogan {
-  margin: 100px 25px;
-  margin-top: 150px;
+  margin: 40px 25px;
+  margin-top: 115px;
   text-align: center;
 }
 
@@ -175,13 +175,13 @@ img {
 .drinks-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 75px;
+  margin-bottom: 40px;
 }
 
 .category-drink h3 {
   color: #fff;
   font-size: 28px;
-  padding: 45px;
+  padding: 20px 25px;
   text-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px;
 }
 
@@ -317,6 +317,11 @@ img {
   color: #cd5905;
 }
 
+.close-button i:hover {
+  transition: all 0.3s ease;
+  transform: rotate(180deg);
+}
+
 .cart-items-container,
 .items-bought-container {
   position: relative;
@@ -359,6 +364,10 @@ img {
   margin-top: 17px;
   padding: 3px;
   cursor: pointer;
+}
+
+.item-in-checkout button:hover {
+  font-weight: bolder;
 }
 
 .cart-header-screen i {
@@ -417,9 +426,20 @@ img {
   border: 2px solid #cd5905;
 }
 
+.pay-with-card:hover {
+  transition: 0.3s all ease;
+  background-color: #cd5905;
+}
+
 .pay-with-cash {
   color: #000;
   border: 2px solid #000;
+}
+
+.pay-with-cash:hover {
+  transition: 0.3s all ease;
+  background-color: #cd5905;
+  color: #fff;
 }
 
 .pay-with-card-container {
@@ -473,6 +493,11 @@ img {
 
 .card-payment-form button {
   width: 70%;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px;
+}
+
+.card-payment-form button:hover {
+  background-color: #cd5905;
 }
 
 .card-payment-form button,
@@ -506,12 +531,30 @@ img {
   border-radius: 2px;
 }
 
+.card-pay-btn,
+.apple-pay,
+.google-pay {
+  transition: 0.3s all ease;
+}
+
 .apple-pay {
   background-color: #333333;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px;
+}
+
+.apple-pay:hover {
+  background-color: #fff;
+  color: #333333;
+  border: 2px solid #333333;
 }
 
 .google-pay {
   background-color: #7b86ea;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px;
+}
+
+.google-pay:hover {
+  background-color: #a3abf5;
 }
 
 .pay-with-cash-container {
@@ -579,6 +622,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .logo-and-reciept-id img {
@@ -724,18 +768,25 @@ footer {
   }
 
   .slogan {
-    margin: 140px 50px;
+    margin: 60px 50px;
   }
 
   .slogan h2 {
-    font-size: 35px;
+    font-size: 45px;
+  }
+
+  .category-drink h3 {
+    font-size: 40px;
+    margin: 0px;
+
+    padding-top: 40px;
   }
 
   .drinks-container {
     display: flex;
     justify-content: space-around;
     margin-bottom: 40px;
-    padding: 75px 0;
+    padding: 40px 0;
   }
 
   .drinks-container li {
