--- a/style.css
+++ b/style.css
@@ -479,6 +479,7 @@ img {
 .card-exp-cvv {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .card-exp-cvv div {
@@ -640,6 +641,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
   padding-bottom: 20px;
 }
 
@@ -648,7 +650,7 @@ img {
 }
 
 .reciept-id {
-  width: 210px;
+  width: 200px;
 }
 
 .reciept-id div {
@@ -875,6 +877,10 @@ footer {
 
   .pay-with-card-container {
     max-width: 700px;
+  }
+
+  .card-exp-cvv {
+    flex-direction: row;
   }
 
   .card-pay-btn {
